# rasat_fai_triangle

./: .gitignore  .~lock.competition_results.csv#  Dockerfile  docker-compose.yml  gui_app.py  main.py  pyproject.toml  run.bat  setup.bat  setup.sh  task_config.json  test_pentagon_flight.py
data/: 002T02V1R1_Daniel_MACAK.igc  test_fai_triangle_50km.igc  test_flight.py
docs/: manual.tex
results/: leaderboard_v146.csv
src/: geo_logic.py  igc_parser.py  scorer.py  visualizer.py
utils/: igc_cleaner.bat  igc_cleaner.py
